fixed spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,8 +2,5 @@
   float: right;
 }
 img {
-  height:90px;
-}
-table {
-  margin-top: 5px;
+  height: 90px;
 }
